# CampusTask

./: .gitignore  CHANGELOG.md  README.md  USER_GUIDE.md  _resolve_conflicts.py  _write_test_model.py  _write_test_service.py  ai_harness.py  bug报告-空tasks.json崩溃.md  eval_cases.json  main.py  pyproject.toml  task_model.py  task_service.py  task_storage.py  tasks.json  test_export.csv  trace.jsonl  反思报告.md  变更请求表.md  实验4-版本控制文档.md  实验6-CI配置说明.md  架构图.md  测试文档.md  迭代总结.md  重构文档.md
.github/workflows/: test.yml
campus_task/: __init__.py  __main__.py
tests/: __init__.py  bug_demo.py  conftest.py  test_task_model.py  test_task_service.py  test_task_storage.py
