[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CampusTask"
version = "1.0.0"
description = "校园任务清单 - 命令行任务管理工具"
authors = [
  { name = "CampusTask Dev", email = "dev@campustask.example" }
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
campustask = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.flake8]
max-line-length = 88
exclude = ["__pycache__", ".git", "*.pyc"]